--- a/res/layout/element_layout.xml
+++ b/res/layout/element_layout.xml
@@ -71,40 +71,24 @@
         </ImageView>
     </RelativeLayout>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="430" >
+        android:layout_weight="430"
+        android:orientation="vertical" >
 
-        <LinearLayout
+        <WebView
+            android:id="@+id/element_text"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/element_name_text"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:cacheColorHint="#00000000"
-                android:paddingBottom="3dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingTop="3dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/element_text" />
-
-            <TextView
-                android:id="@+id/element_info_text"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:cacheColorHint="#00000000"
-                android:paddingBottom="3dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingTop="3dp"
-                android:textColor="@color/element_text" />
-        </LinearLayout>
-    </ScrollView>
+            android:layout_height="wrap_content"
+            android:cacheColorHint="#00000000"
+            android:paddingBottom="3dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="3dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/element_text" />
+    </LinearLayout>
 
     <com.google.ads.AdView
         android:id="@+id/adView"
